Service section done and fixed blur on ios

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,9 @@
 h1 {
    @apply text-softbutter font-bold text-5xl md:text-7xl [text-shadow:-2px_2px_4px_rgba(0,0,0,0.4)];
 }
+h2 {
+   @apply text-softbutter font-bold text-xl md:text-3xl [text-shadow:-2px_2px_4px_rgba(0,0,0,0.4)];
+}
 h4 {
    @apply text-softbutter font-medium text-xl md:text-3xl [text-shadow:-2px_2px_4px_rgba(0,0,0,0.4)];
 }
